# projeto_cobranca

./: README.md  pyproject.toml
src/app/: criar_arquivo_atualizado_meoo.py  criar_arquivo_atualizado_spoc.py
src/data/: Clientes.xlsx  Pendências Meoo LL Getrak.xlsx  Retoma Meoo.xlsx  Retoma Meoo_Previous.xlsx
