[tool.poetry]
name = "projeto-cobranca"
version = "0.1.0"
description = "Projeto para auxiliar as demandas de cobrança"
authors = ["Luiz <lgds.demtrio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
pandas = "^2.2.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
